tests/algorithms/transpiler/rb/strings/boyer_moore_search.error
error[P999]: /workspace/mochi/tests/github/TheAlgorithms/Mochi/strings/boyer_moore_search.mochi:42:26: unexpected token "-" (expected PostfixExpr)
  --> /workspace/mochi/tests/github/TheAlgorithms/Mochi/strings/boyer_moore_search.mochi:42:26

 42 |     if mismatch_index == -1 {
    |                          ^

help:
  Parse error occurred. Check syntax near this location.